// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoadingSpinner > Snapshot > matches snapshot for default props 1`] = `
<div
  class="flex flex-col items-center justify-center gap-2"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-loader-circle animate-spin text-primary h-8 w-8"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12a9 9 0 1 1-6.219-8.56"
    />
  </svg>
</div>
`;

exports[`LoadingSpinner > Snapshot > matches snapshot with all props 1`] = `
<div
  class="flex flex-col items-center justify-center gap-2 custom"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-loader-circle animate-spin text-primary h-12 w-12"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12a9 9 0 1 1-6.219-8.56"
    />
  </svg>
  <p
    class="text-sm text-muted-foreground"
  >
    Loading...
  </p>
</div>
`;
